# physic-engine-rust

./: Cargo.toml  README.md
examples/: basic_simulation.rs  visual_demo.rs
src/: lib.rs  world.rs
src/collision/: contact.rs  mod.rs
src/collision/broad_phase/: bvh.rs
src/collision/narrow_phase/: epa.rs  gjk.rs  mod.rs
src/constraints/: contact_constraint.rs  mod.rs
src/dynamics/: integrator.rs  mod.rs  rigid_body.rs
src/geometry/: aabb.rs  mod.rs  shape.rs
src/math/: mat3.rs  mod.rs  quat.rs  transform.rs  vec3.rs
src/solver/: mod.rs  pgs.rs
